# HMAC-python

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py
src/api/v1/: router.py
src/core/: config.py  log.py
src/schamas/: responce_schema.py  verify_schema.py
src/services/: hmac_service.py
src/services/utils/: codec.py  rotate_secret.py  validators.py
tests/: conftest.py  test_codec.py  test_config.py  test_hmac_service.py  test_perfomance.py  test_router.py
tests/mock_configs/: invalid_config_hmac_alg.json  invalid_config_max_bytes.json  invalid_config_secret.json
